# onecation_sales_factory

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  contacts.csv  generate_pdf.py  generate_pdf_playwright.py  industry_targets.json  migrate_runtime_to_supabase.py  pyproject.toml  render.yaml  run.bat  run_notion_log_from_summary.py  run_scheduled.bat  run_web.bat  send_emails.py  sync_notion_pipeline.py  sync_pdf_to_notion.py  web_dashboard.py
docs/: AGENT_LLM_RECOMMENDATIONS.md  API_AND_KEYS.md  CREW_UPGRADE_ROADMAP.md  DELIVERY_PLAN.md  EMAIL_COPY_GUIDE.md  EMAIL_DELIVERABILITY.md  HOW_TO_TEST.md  NOTION_AI_PROMPT.md  NOTION_DB_COLUMNS.md  NOTION_SETUP.md  ORCHESTRATION.md  PROCESS_FLOW.md  RENDER_LIBREOFFICE.md  RENDER_SETUP.md  SUPABASE_SETUP.md  TOKEN_AND_COST_ESTIMATE.md  TOMORROW_HANDOFF.md  scoring_matrix.md
knowledge/: onecation_proof_points.md
src/sales_factory/: auto_delivery.py  brand_proof.py  crew.py  delivery_manager.py  main.py  managed_run.py  output_validation.py  proposal_quality.py  review_ops.py  runtime_assets.py  runtime_copilot.py  runtime_db.py  runtime_notifications.py  runtime_supabase.py  (+3 more)
supabase/: runtime_schema.sql
tests/: test_auto_delivery.py  test_brand_proof.py  test_crew.py  test_dashboard_pipeline.py  test_delivery_manager.py  test_generate_pdf_playwright.py  test_managed_run.py  test_managed_run_retry.py  test_output_validation.py  test_proposal_quality.py  test_runtime_assets.py  test_runtime_notifications.py  test_runtime_supabase.py  test_segment_calendar.py  test_send_emails.py  test_slack_review.py
(+4 files in other folders)
